tests/errors/err_for_mut_non_list.mix
// ERROR: mutable loop binding 'i!' is only supported when iterating a list
main()
    for i! in 0..3
        print(i)
